svc.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: dev
  name: first-svc
spec:
  selector:
    app: nginx
  ports:
  - name: http
    port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: dev
  name: second-svc
spec:
  selector:
    app: second
  ports:
  - name: http
    port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: dev
  name: third-svc
spec:
  selector:
    app: book-app
  ports:
  - name: http
    port: 80
    targetPort: 8080
